src/test/deca/syntax/valid/synt/identifiers.deca
{
    int x = azezas;
    int y = salut_27;
    int z = skdjak$xxx;
    int t = _salut;
    int w = $ad255;
}
